Rota Sobre adicionada

--- a/src/app/routes/contato/contato.component.html
+++ b/src/app/routes/contato/contato.component.html
@@ -13,7 +13,7 @@
           class="form-control"
           id="inputNome"
           requird
-          placeholder="name@example.com"
+          placeholder="Digite seu nome"
         />
       </div>
       <!--Telefone-->
@@ -25,7 +25,7 @@
           class="form-control"
           id="inputTelefone"
           required
-          placeholder="name@example.com"
+          placeholder="Ex: 00 00000-0000"
         />
       </div>
       <!--Email-->
