--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -21,7 +21,7 @@
           <a class="nav-link text-white" href="/contato">Contato</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled text-secondary" aria-disabled="true">Disabled</a>
+          <a class="nav-link text-white" href="/sobre">Sobre</a>
         </li>
       </ul>
     </div>
