--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -1,4 +1,3 @@
 <div class="d-flex flex-column justify-content-center align-items-center text-center">
-    <p>ir para contato</p>
-    <a href="/contato" class="btn btn-primary"> aperte aqui</a>
+    <h1>Home</h1>
 </div>
